--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Heroku
 
 on:
   push:
@@ -24,5 +21,5 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-#     - name: Test
-#       run: go test -v ./...
+    - name: Test
+      run: go test -v ./...
