--- a/.github/workflows/heroku-deploy-QA.yml
+++ b/.github/workflows/heroku-deploy-QA.yml
@@ -30,6 +30,8 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
+    - name: Rename .env
+      run: mv .env.default .env
           
     - name: Build
       run: go build -v ./...
