--- a/.github/workflows/heroku-deploy-QA.yml
+++ b/.github/workflows/heroku-deploy-QA.yml
@@ -30,8 +30,6 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-    - name: Rename .env
-      run: mv .env.default .env
           
     - name: Build
       run: go build -v ./...
@@ -46,3 +44,4 @@ jobs:
         heroku_app_name: "challenge-api-qa"
         heroku_email: ${{secrets.HEROKU_EMAIL}}
         branch: QA
+        env_file: .env.default
