--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_URL=mongodb://mongo:27100/db
+MONGO_URL=mongodb+srv://root:root@cluster0.jgltqbs.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=secret
