--- a/.github/workflows/heroku-deploy-QA.yml
+++ b/.github/workflows/heroku-deploy-QA.yml
@@ -1,13 +1,16 @@
 name: QA - Heroku Deploy
 
 on:
+   # Job Trigger automatically if any code push/PR to QA branch
    push:
     branches:
       - QA
+   # Enabled Manual Trigger
    workflow_dispatch:
+   
 jobs:
-
-  build:
+  build-deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -44,3 +47,4 @@ jobs:
         heroku_app_name: "challenge-api-qa"
         heroku_email: ${{secrets.HEROKU_EMAIL}}
         branch: QA
+#         env_file: .env
