--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,35 @@
 version: '3.3'
 services:
+  # api:
+  #   build: .
+  #   ports:
+  #     - '3100:8080'
+  #   volumes:
+  #     - .:/app
+  #   depends_on:
+  #     - 'mongo'
+  # web:
+  #   container_name: 'web'
+  #   image: 'nginx:latest'
+  #   ports:
+  #     - '80:80'
+  #   volumes:
+  #     - ./nginx/dev.conf.d:/etc/nginx/conf.d
+  #   depends_on:
+  #     - 'api'
+  # mongo:
+  #   image: 'mongo:latest'
+  #   container_name: 'mongo'
+  #   ports:
+  #     - '27100:27017'
+  #   volumes:
+  #     - ./data/dev/mongo:/data/db
   api:
-    build: .
+    container_name: api
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - '3100:8080'
+      - 8080:8080
     volumes:
-      - .:/app
-    depends_on:
-      - 'mongo'
-  web:
-    container_name: 'web'
-    image: 'nginx:latest'
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx/dev.conf.d:/etc/nginx/conf.d
-    depends_on:
-      - 'api'
-  mongo:
-    image: 'mongo:latest'
-    container_name: 'mongo'
-    ports:
-      - '27100:27017'
-    volumes:
-      - ./data/dev/mongo:/data/db
+      - ./:/api
